stopped offer code from shifting down

--- a/src/styles/components/App.css
+++ b/src/styles/components/App.css
@@ -143,7 +143,7 @@ li {
 .code {
   display: none;
   color: #76EEC6;
-  margin-top: 0.2em;
+  margin-top: 0.15em;
   margin-bottom: 0;
 }
 
